# tensorflow

./: .gitignore  CMakeLists.txt  build.py  conanfile.py  conanfile.txt  project.conf
cmake/profiles/: android_armv7  android_armv8  android_x86  android_x86_64  ios_armv8  macos_x86_64  windows_x86  windows_x86_64
scripts/: CMakeLists.txt  build-android.bat  build-headers.bat  build-ios.sh  build-macos.sh  build-pc.bat  build.bat
tensorflow/lite/: CMakeLists.txt
